--- a/SetepassosPRJ/wwwroot/css/site.css
+++ b/SetepassosPRJ/wwwroot/css/site.css
@@ -63,19 +63,19 @@ body {
 }
 
 .icons {
-    height: 25%;
-    width: 25%;
+    height: 27%;
+    width: 27%;
     margin-left: 30px;
-    margin-top: 8px;
+    margin-top: 2px;
 }
 .iconsMonstro {
-    height: 3%;
-    width: 3%;
-    margin: 3px;
+    height: 5%;
+    width: 5%;
+    margin: 2px;
 }
 
 .iconMoeda {
-    margin-top:35%;
+    margin-top:25%;
 }
 
 
@@ -100,16 +100,16 @@ body {
 
 .BotoesJogo {
     width: 50%;
-    height: 50%;
-    margin: 5px;
+    height: 20%;
+    margin: 1px;
     background: none;
     border-color: none;
     border-style: none;
 }
-    .BotoesJogo:hover {
-        filter: brightness(1.4);
-        opacity: 0.7;
-    }
+.BotoesJogo:hover {
+   filter: brightness(1.4);
+   opacity: 0.7;
+}
 
 label {
     color: beige;
@@ -212,6 +212,7 @@ input[type='radio'] {
     height: 70%;
     bottom: 10px;
     left: 16%;
+    z-index:-1;
 }
 
 .areajogavel {
@@ -230,7 +231,7 @@ input[type='radio'] {
 .areabotoes {
     width: 100%;
     height: 100%;
-    margin-top: 50px;
+    margin-top: 40px;
 }
 
 /* headers com estilo */
@@ -280,7 +281,7 @@ h3 {
 .MensagemDano {
     color:crimson;
     font-family: Verdana;
-    display: inline-block;
     font-size: 20px;
     margin-left: 18px;
+    display: inline-block;
 }
