--- a/SetepassosPRJ/Views/Jogo/JogoIniciado.cshtml
+++ b/SetepassosPRJ/Views/Jogo/JogoIniciado.cshtml
@@ -122,18 +122,18 @@
                     <div class="areabotoes">
                         <div>
                             <input name="gameid" value="@Model.GameID" type="hidden" />
-                            <button class="BotoesJogo" type="submit" name="action" value="GoForward"><img src="~/images/btns/btn-avancar.png" alt="Avançar"></button> @Model.TotalAvancar
+                            <button class="BotoesJogo" type="submit" name="action" value="GoForward"><img src="~/images/btns/btn-avancar1.png" alt="Avançar"></button> @Model.TotalAvancar
                         </div>
                         @if (Model.Sala != 1)
                         {
                             <div>
                                 <input name="gameid" value="@Model.GameID" type="hidden" />
-                                <button class="BotoesJogo" type="submit" name="action" value="GoBack"><img src="~/images/btns/btn-recuar.png" alt="Recuar"></button> @Model.TotalRecuar
+                                <button class="BotoesJogo" type="submit" name="action" value="GoBack"><img src="~/images/btns/btn-recuar1.png" alt="Recuar"></button> @Model.TotalRecuar
                             </div>
                         }
                         <div>
                             <input name="gameid" value="@Model.GameID" type="hidden" />
-                            <button class="BotoesJogo" type="submit" name="action" value="SearchArea"><img src="~/images/btns/btn-examinar.png" alt="Examinar"></button> @Model.TotalAreasExaminadas
+                            <button class="BotoesJogo" type="submit" name="action" value="SearchArea"><img src="~/images/btns/btn-examinar1.png" alt="Examinar"></button> @Model.TotalAreasExaminadas
                         </div>
                     </div>
                 }
@@ -143,22 +143,22 @@
 
                         <div>
                             <input name="gameid" value="@Model.GameID" type="hidden" />
-                            <button class="BotoesJogo" type="submit" name="action" value="Attack"><img src="~/images/btns/btn-atacar.png" alt="Atacar"></button> @Model.TotalAtaques
+                            <button class="BotoesJogo" type="submit" name="action" value="Attack"><img src="~/images/btns/btn-atacar1.png" alt="Atacar"></button> @Model.TotalAtaques
                         </div>
                         <div>
                             <input name="gameid" value="@Model.GameID" type="hidden" />
-                            <button class="BotoesJogo" type="submit" name="action" value="Flee"><img src="~/images/btns/btn-fugir.png" alt="Fugir"></button> @Model.TotalFugas
+                            <button class="BotoesJogo" type="submit" name="action" value="Flee"><img src="~/images/btns/btn-fugir1.png" alt="Fugir"></button> @Model.TotalFugas
                         </div>
                     </div>
                 }
 
                 <div>
                     <input name="gameid" value="@Model.GameID" type="hidden" />
-                    <button class="BotoesJogo" type="submit" name="action" value="DrinkPotion"><img src="~/images/btns/btn-pocao.png" alt="Beber Poção"></button> @Model.TotalPocoesUsadas
+                    <button class="BotoesJogo" type="submit" name="action" value="DrinkPotion"><img src="~/images/btns/btn-pocao1.png" alt="Beber Poção"></button> @Model.TotalPocoesUsadas
                 </div>
                 <div>
                     <input name="gameid" value="@Model.GameID" type="hidden" />
-                    <button class="BotoesJogo" type="submit" name="action" value="Quit"><img src="~/images/btns/btn-desistir.png" alt="Desistir"></button>
+                    <button class="BotoesJogo" type="submit" name="action" value="Quit"><img src="~/images/btns/btn-desistir1.png" alt="Desistir"></button>
                 </div>
             </form>
         </div>
