--- a/SetepassosPRJ/Views/Jogo/CriarJogo.cshtml
+++ b/SetepassosPRJ/Views/Jogo/CriarJogo.cshtml
@@ -14,11 +14,11 @@
         <div class="form-group">
                    <img src="~/images/Nerd-Char.png" alt="HTML5 Icon" class="charpick">
                 <label class="ArrangeChars">
-                    <input class="form-control" type="radio" asp-for="PerfilTipo" value="S" checked>Nerd
+                    <input class="form-control" type="radio" asp-for="PerfilTipo" value="W" checked>Nerd
                 </label>
                     <img src="~/images/Fat-Char.png" alt="HTML5 Icon" class="charpick">
                 <label class="ArrangeChars">
-                    <input class="form-control" type="radio" asp-for="PerfilTipo" value="W">Gordo
+                    <input class="form-control" type="radio" asp-for="PerfilTipo" value="S">Gordo
                 </label>
                     <img src="~/images/Old-Char.png" alt="HTML5 Icon" class="charpick">
                 <label class="ArrangeChars">
