--- a/SetepassosPRJ/Views/Jogo/JogoIniciado.cshtml
+++ b/SetepassosPRJ/Views/Jogo/JogoIniciado.cshtml
@@ -27,11 +27,11 @@
         <div class="col-sm-2">
             <div class="text-left">
 
-                @if (Model.PerfilTipo == "S")
+                @if (Model.PerfilTipo == "W")
                 {
                     <img src="~/images/Nerd-Frame mini.png" class="icons" />
                 }
-                else if (Model.PerfilTipo == "W")
+                else if (Model.PerfilTipo == "S")
                 {
                     <img src="~/images/Fat-Frame mini.png" class="icons" />
                 }
@@ -122,13 +122,13 @@
                     <div class="areabotoes">
                         <div>
                             <input name="gameid" value="@Model.GameID" type="hidden" />
-                            <button class="BotoesJogo" type="submit" name="action" value="GoForward"><img src="~/images/btns/btn-avancar1.png" alt="Avançar"></button> @Model.TotalAvancar
+                            <button class="BotoesJogo" type="submit" name="action" value="GoForward"><img src="~/images/btns/btn-avancar1.png" alt="Avançar"></button> 
                         </div>
                         @if (Model.Sala != 1)
                         {
                             <div>
                                 <input name="gameid" value="@Model.GameID" type="hidden" />
-                                <button class="BotoesJogo" type="submit" name="action" value="GoBack"><img src="~/images/btns/btn-recuar1.png" alt="Recuar"></button> @Model.TotalRecuar
+                                <button class="BotoesJogo" type="submit" name="action" value="GoBack"><img src="~/images/btns/btn-recuar1.png" alt="Recuar"></button> 
                             </div>
                         }
                         <div>
@@ -147,7 +147,7 @@
                         </div>
                         <div>
                             <input name="gameid" value="@Model.GameID" type="hidden" />
-                            <button class="BotoesJogo" type="submit" name="action" value="Flee"><img src="~/images/btns/btn-fugir1.png" alt="Fugir"></button> @Model.TotalFugas
+                            <button class="BotoesJogo" type="submit" name="action" value="Flee"><img src="~/images/btns/btn-fugir1.png" alt="Fugir"></button> 
                         </div>
                     </div>
                 }
