Alterado código do modelo Jogo Adicionadas mensagens de interação

--- a/SetepassosPRJ/Views/Jogo/CriarJogo.cshtml
+++ b/SetepassosPRJ/Views/Jogo/CriarJogo.cshtml
@@ -14,7 +14,7 @@
         <div class="form-group">
                    <img src="~/images/Nerd-Char.png" alt="HTML5 Icon" class="charpick">
                 <label class="ArrangeChars">
-                    <input class="form-control" type="radio" asp-for="PerfilTipo" value="W" checked>Nerd
+                    <input class="form-control" type="radio" asp-for="PerfilTipo" value="B" checked>Nerd
                 </label>
                     <img src="~/images/Fat-Char.png" alt="HTML5 Icon" class="charpick">
                 <label class="ArrangeChars">
@@ -22,7 +22,7 @@
                 </label>
                     <img src="~/images/Old-Char.png" alt="HTML5 Icon" class="charpick">
                 <label class="ArrangeChars">
-                    <input class="form-control" type="radio" asp-for="PerfilTipo" value="B">velha louca
+                    <input class="form-control" type="radio" asp-for="PerfilTipo" value="W">velha louca
                 </label>
             </div>
                            
