--- a/SetepassosPRJ/wwwroot/css/site.css
+++ b/SetepassosPRJ/wwwroot/css/site.css
@@ -238,12 +238,12 @@ h1 {
     color: gold;
     text-decoration: underline;
     letter-spacing: 2px;
-    text-shadow: 0px 0px 2px cyan;
+    text-shadow: 0 0 2px cyan;
 }
 h2 {
     color: gainsboro;
     letter-spacing: 1px;
-    text-shadow: 0px 0px 2px black;
+    text-shadow: 0 0 2px black;
 }
 
 h3 {
@@ -291,8 +291,8 @@ h3 {
     display: inline-block;
 }
 .MensagemMeuAtaque {
-    color:orangered;
+    color:yellow;
     font-family: Verdana;
-    font-size: 20px;
-    margin-left: 14px;
+    font-size: 16px;
+    text-shadow:1px 1px 1px black;
 }
