--- a/SetepassosPRJ/Views/Jogo/JogoIniciado.cshtml
+++ b/SetepassosPRJ/Views/Jogo/JogoIniciado.cshtml
@@ -93,7 +93,7 @@
             {
                 <div class="text-center">
                     @Model.MensagemAccao
-                    <a asp-action="JogoAcabado"><img src="~/images/btns/btn-sair.png" alt="Sair"></a>
+                    <a asp-action="HiScores" asp-controller="Home"><img src="~/images/btns/btn-sair.png" alt="Sair"></a>
                 </div>
 
             }
@@ -101,7 +101,7 @@
             {
                 <div class="text-center">
                     @Model.MensagemAccao
-                    <a asp-action="JogoAcabado"><img src="~/images/btns/btn-sair.png" alt="Sair"></a>
+                    <a asp-action="HiScores" asp-controller="Home"><img src="~/images/btns/btn-sair.png" alt="Sair"></a>
                 </div>
                 <img src="~/images/Contextual/victory.png" />
             }
