--- a/SetepassosPRJ/Views/Home/HiScores.cshtml
+++ b/SetepassosPRJ/Views/Home/HiScores.cshtml
@@ -31,7 +31,7 @@
                             {
                                 @:Vitoria
                             }
-                            else if (jogo.ResultadoAccao == Result.GameHasEnded)
+                            else if (jogo.ResultadoAccao == Result.GameHasEnded || jogo.PontosVida == 0)
                             {
                                 @:Derrota
                             }
